Add feed branch rendering

--- a/src/components/AsianText.astro
+++ b/src/components/AsianText.astro
@@ -1,7 +1,14 @@
 ---
 import AlertBox from "./AlertBox.astro";
+import FeedBranch from "./FeedBranch.astro";
 ---
+<FeedBranch>
 <AlertBox title="This post has East Asian text.">
     <>If your system does not have <a href="/blog/article/2024/02/legacy-asian-language-support">support for Asian languages</a> installed, some text may not be displayed correctly.</>
 </AlertBox>
 <br />
+<p slot="feed">
+    <b>This post has East Asian text.</b>
+    If your system does not have <a href="/blog/article/2024/02/legacy-asian-language-support">support for Asian languages</a> installed, some text may not be displayed correctly.</>
+</p>
+</FeedBranch>
