--- a/src/components/Youtube.astro
+++ b/src/components/Youtube.astro
@@ -1,20 +1,57 @@
 ---
 import AlertBox from "./AlertBox.astro";
+import Anchor from "./Anchor.astro";
+import FeedBranch from "./FeedBranch.astro";
 
 import { MODERN_WEBSITE } from "@lib/settings";
 
 interface Props {
     instance?: string,
     id: string,
+    title: string,
     duration?: `${number}:${number}`
 }
-const { instance, id } = Astro.props;
+const { instance, id, duration } = Astro.props;
 
 const INVIDIOUS_DEFAULT_INSTANCE = "https://inv.tux.pizza";
 
+let videoData: {
+    title: string,
+    description: string,
+    lengthSeconds: number
+}
+
+async function fetchVideoData(): Promise<Partial<typeof videoData>> {
+    if(videoData)
+        return videoData;
+    else {
+        try {
+            const req = `${instance}/api/v1/videos/${id}?fields=title,lengthSeconds,description`
+            const res = await fetch(req);
+            if(res.ok) {
+                videoData = await res.json();
+                return videoData;
+            }
+            else {
+                return {};
+            }
+        } catch {
+            return {};
+        }
+    }
+}
+
+
 const hrefOriginal = Astro.url.pathname.split("/").filter(s => s);
 const slug = hrefOriginal[hrefOriginal.length-1];
+
+const title = Astro.props.title ?? ((await fetchVideoData())?.title ?? "Could not get video title");
 ---
+<FeedBranch>
 <AlertBox title="The Legacy Version does not support playing YouTube videos." icon="youtube">
     You can check the <a href={`${MODERN_WEBSITE}/blog/article/${slug}`}>modern version</a> of The Yonic Corner, or open this video <a href={`${instance ?? INVIDIOUS_DEFAULT_INSTANCE}/watch?v=${id}`} target="_blank" rel="noopener noreferrer">from Insidious</a>.<p style="margin-bottom: 0; margin-top: 8px;"><i>Both options require a modern browser.</i></p>
 </AlertBox>
+<p slot="feed">
+    <b>YouTube video: </b> <Anchor href={`https://www.youtube.com/watch?v=${id}`}>{title}</Anchor> {duration && `(${duration})`}
+</p>
+</FeedBranch>
