--- a/src/pages/player/[...music].astro
+++ b/src/pages/player/[...music].astro
@@ -1,12 +1,12 @@
 ---
 import { getImage } from 'astro:assets';
-import { getCollection } from 'astro:content';
+import { getCollection, type CollectionEntry } from 'astro:content';
 import ffprobe from 'ffprobe';
 import {path as ffprobePath } from 'ffprobe-static';
 
 export async function getStaticPaths() {
     const songList = await getCollection("music");
-    return songList.map((song) => {
+    return songList.filter(({data}) => data.sources.find(hasSuitableSource) != null).map((song) => {
         return {
             params: { music: song.id },
             props: { music: song.data }
@@ -17,11 +17,13 @@ export async function getStaticPaths() {
 const { title, sources, author, album, duration, cover } = Astro.props.music;
 const validFormats = ["audio/mpeg", "audio/mp3","audio/wav"];
 
-const musicSrc = sources.find(source => {
+function hasSuitableSource(source: CollectionEntry<"music">["data"]["sources"][number]) {
 	if(source.type === "youtube")
 		return false;
 	return new URL(source.src).protocol === "http:" && validFormats.indexOf(source.type) >= 0;
-});
+}
+
+const musicSrc = sources.find(hasSuitableSource);
 
 const coverImage = cover ? (await import(`../../assets/covers/${cover}.png`)).default : undefined;
 const coverSrc = coverImage? (await getImage({src: coverImage, width: 24, height: 24, format: 'jpg' })).src : undefined;
@@ -55,7 +57,7 @@ function getDurationFromString(duration: string): number {
 async function getDurationFromSrc(source: string) {
 	try {
 		const res = await ffprobe(source, {path: ffprobePath});
-		return parseFloat(res.streams[0].duration ?? DEFAULT_DURATION.toString());
+		return parseFloat(res.streams[0]?.duration ?? DEFAULT_DURATION.toString());
 	} catch {
 		return DEFAULT_DURATION;
 	}
