--- a/src/pages/player/[...music].astro
+++ b/src/pages/player/[...music].astro
@@ -1,8 +1,10 @@
 ---
 import { getImage } from 'astro:assets';
-import { getCollection, type CollectionEntry } from 'astro:content';
+import { getCollection } from 'astro:content';
 import ffprobe from 'ffprobe';
 import {path as ffprobePath } from 'ffprobe-static';
+
+import { hasSuitableSource } from "@lib/util";
 
 export async function getStaticPaths() {
     const songList = await getCollection("music");
@@ -15,13 +17,6 @@ export async function getStaticPaths() {
 }
 
 const { title, sources, author, album, duration, cover } = Astro.props.music;
-const validFormats = ["audio/mpeg", "audio/mp3","audio/wav"];
-
-function hasSuitableSource(source: CollectionEntry<"music">["data"]["sources"][number]) {
-	if(source.type === "youtube")
-		return false;
-	return new URL(source.src).protocol === "http:" && validFormats.indexOf(source.type) >= 0;
-}
 
 const musicSrc = sources.find(hasSuitableSource);
 
