--- a/src/pages/blog/[page].astro
+++ b/src/pages/blog/[page].astro
@@ -22,4 +22,4 @@ interface Props {
 
 ---
 
-<Layout {page} title="All posts" />
+<Layout {page} title="All posts" description="Browse for all posts" />
