--- a/src/pages/series/[page].astro
+++ b/src/pages/series/[page].astro
@@ -19,4 +19,4 @@ interface Props {
 
 ---
 
-<Layout {page} title="Article series" description="" />
+<Layout {page} title="Article series" description="Some articles are divided into multiple parts. Series group them altogether in a nice readable format." />
