Use a single player

--- a/src/components/PlayerLink.astro
+++ b/src/components/PlayerLink.astro
@@ -22,7 +22,7 @@ const hasValidSource = music.sources.find(source => {
 	return new URL(source.src).protocol === "http:" && validFormats.indexOf(source.type) >= 0;
 });
 
-const href = `/player-object/${musicId.replaceAll("\\", "/")}`;
+const href = `/player/${musicId.replaceAll("\\", "/")}`;
 ---
 <table cellpadding="2" cellspacing="2" width="454" class="player-link">
     <tr>
