Remove unused routes, state support for Win95 on index

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ import RSSFeed from "@lib/components/feed/RSSFeed.astro";
 			</noscript>
 			<p>This blog officially supports the minimal following browsers and operating systems:</p>
 			<ul>
-				<li><b>Windows 98/NT:</b> Internet Explorer 5, Firefox 2, K-Meleon 1.5.4, Opera 9</li>
+				<li><b>Windows 9x/NT 4:</b> Internet Explorer 5, Firefox 2, K-Meleon 1.5.4, Opera 9</li>
 				<li><b>Mac OS 9 (Classic):</b> Netscape 7, Classilla 9.3.4 Beta</li>
 			</ul>
 			<p id="jquery-test">Your browser does not support jQuery. Some functions of the website may not work well.</p>
