--- a/src/components/PlayerLink.astro
+++ b/src/components/PlayerLink.astro
@@ -18,7 +18,9 @@ try {
 const validFormats = ["audio/mpeg", "audio/mp3","audio/wav"];
 
 const hasValidSource = music.sources.find(source => {
-	if(source.type === "youtube")
+    if (source.type === "iarchive")
+        return true;
+	else if(source.type === "youtube")
 		return false;
 	return new URL(source.src).protocol === "http:" && validFormats.indexOf(source.type) >= 0;
 });
