--- a/src/pages/player/[...music].astro
+++ b/src/pages/player/[...music].astro
@@ -29,7 +29,7 @@ let musicDuration = DEFAULT_DURATION;
 
 if(selectedSrc) {
 	if(selectedSrc.type === "iarchive") {
-		const { item, file } = selectedSrc.src;
+		const [ item, file ] = selectedSrc.src.split("/").map(segment => decodeURIComponent(segment));
 		try {
 			const archiveItem = await (await fetch(`https://archive.org/metadata/${item}`)).json() as ArchiveItem;
 			const archiveFile = archiveItem.files.find(({name}) => file === name );
