Fix code block syntax errors and displaying issues on Netscape

--- a/src/components/CodeBlock.astro
+++ b/src/components/CodeBlock.astro
@@ -1,5 +1,5 @@
 ---
-import { Code } from 'astro/components';
+import { Code } from 'astro:components';
 import type { BuiltinLanguage, LanguageRegistration, SpecialLanguage } from 'shikiji';
 
 import Window from './Window.astro';
@@ -17,13 +17,13 @@ const filename = Astro.props.filename?.trim();
 
 ---
 <FeedBranch>
-<Window class="code-window" title={filename!=="-"? filename : undefined}>
-    <Code code={code} lang={lang} theme="min-dark"/>
-</Window>
-<div slot="feed">
-    {filename && <b>{filename}:</b><br/>}
-    <Code code={code} lang={lang} theme="min-dark"/>
-</div>
+    <Window class="code-window" title={filename!=="-"? filename : undefined}>
+        <Code code={code} lang={lang} theme="min-dark"/>
+    </Window>
+    <div slot="feed">
+        {filename && (<b>{filename}:</b><br/>)}
+        <Code code={code} lang={lang} theme="min-dark"/>
+    </div>
 </FeedBranch>
 
 <style lang="scss" is:global>
@@ -32,6 +32,7 @@ const filename = Astro.props.filename?.trim();
         background: none!important;
         margin: 0!important;
         padding: 0!important;
+        // padding-bottom: 18px!important;
         overflow: auto!important;
         overflow: scroll auto!important;
         overflow-x: scroll!important;
