--- a/src/components/Window.astro
+++ b/src/components/Window.astro
@@ -32,6 +32,7 @@ interface Props {
 </table>
 
 <style lang="scss" is:global>
+    @use "sass:color";
     #layout .window {
         $margin: 24px;
         border-collapse:collapse;
@@ -77,6 +78,7 @@ interface Props {
         }
         .content {
             background-color: #003333;
+            // background-color: color.mix(#003333, red, 75%);
             color: white;
             padding: 10px;
             // overflow: scroll;
