Move Code component as internal component

--- a/src/components/CodeBlock.astro
+++ b/src/components/CodeBlock.astro
@@ -2,7 +2,7 @@
 import { getIconForFile } from 'vscode-icons-js';
 import type { BuiltinLanguage, LanguageRegistration, SpecialLanguage } from 'shiki';
 
-import Code from './Code.astro';
+import Code from './_internal/Code.astro';
 import Window from './Window.astro';
 import FeedBranch from './FeedBranch.astro';
 
