Revamp RSS feeds

--- a/src/components/feed/HTMLFeed.astro
+++ b/src/components/feed/HTMLFeed.astro
@@ -6,16 +6,17 @@ import {load} from 'cheerio';
 
 interface Props {
     post: string,
-    heroImage?: ImageMetadata
+    heroImage?: ImageMetadata,
+    full: boolean,
 }
 
-const { post, heroImage } = Astro.props;
+const { post, heroImage, full } = Astro.props;
 
 let finalHtml = "";
 
 const html = await Astro.slots.render("html");
 let $ = load(html, null, false);
-const feedHtml = $(".feed-preview").html();
+const feedHtml = full? $.html() : $(".feed-preview").html();
 if(feedHtml) {
     $ = load(feedHtml, null, false);
     $(".bubble").each(function() {
