--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,7 +30,8 @@ const basify = (url: string) => `url(${baseUrl}${url})`;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/x-icon" href={baseUrl + "/favicon.ico"} />
 		<link rel="shortcut icon" type="image/x-icon" href={baseUrl + "/favicon.ico"}>
-		<link rel="alternate" type=" application/atom+xml" href={baseUrl + "/feeds/rss.xml"}>
+		<link rel="alternate" type=" application/rss+xml" href={baseUrl + "/feeds/rss.xml"}>
+		<link rel="alternate" type=" application/rss+xml" href={baseUrl + "/feeds/rss-full.xml"}>
 		<link rel="sitemap" href="/sitemap-index.xml" />
 		<meta name="generator" content={Astro.generator} />
 		{noindex && <meta name="robots" content="noindex" /> }
