Add trailing slashes to player window and links

--- a/src/components/MusicPlayerWindow.astro
+++ b/src/components/MusicPlayerWindow.astro
@@ -4,7 +4,7 @@ const baseUrl = import.meta.env.BASE_URL.replace(/\/$/, "");
 
 <img class="navigation-tab" alt="Music player" src={baseUrl + "/ui/tab-player.gif"} width="200" height="32" />
 <div class="player-window">
-    <iframe name="player" frameborder="0" width="200" height="200" id="player-frame" src={baseUrl + "/player/null"} />
+    <iframe name="player" frameborder="0" width="200" height="200" id="player-frame" src={baseUrl + "/player/null/"} />
 </div>
 
 <style is:global>
