--- a/src/pages/player/null.astro
+++ b/src/pages/player/null.astro
@@ -23,6 +23,7 @@ const parsedFlashVars = Object.entries(flashVars).reduce((parsed, [key, value]) 
 	<head>
 		<title>Music player</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta name="robots" content="noindex, nofollow" />
 	</head>
 	<body marginwidth="0" marginheight="0" leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0" bgcolor="#A1FFED">
 		<div id="flashContent">
